# GenQR

./: .gitignore  README.md
.github/workflows/: backend-deploy.yml  frontend-deploy.yml  main_qr-link.yml
qr-qode/: main.py  pyproject.toml
src/: index.html  script.js  style.css
