[project]
name = "qr-qode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.5",
    "pillow>=12.0.0",
    "segno>=1.5.2",
    "cairosvg>=2.7.0",
    "requests>=2.32.5",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.22.0",
    "python-multipart>=0.0.9"
]
